fixed overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -93,6 +93,7 @@ footer {
 }
 .slider__container {
   position: relative;
+  overflow: hidden;
   height: 4rem;
 }
 .intro__big {
